2008-05-28  James Willcox  <snorp@novell.com>

	* src/Extensions/Extensions.mds:
	* src/Extensions/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt.addin.xml:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt.mdp:
	* src/Extensions/Banshee.CoverArt/CoverArtService.cs:
	* src/Extensions/Makefile.am:

	Add Banshee.CoverArt extension which allows user-initiated and
	automatic cover art fetching for the entire MusicLibrary.

	* src/Core/Banshee.Services/Banshee.Metadata.Rhapsody/RhapsodyQueryJob.cs:
	Close the response when we're done with it, fixes some timeout
	issues when fetching many things at a time.

	* src/Core/Banshee.Services/Banshee.Metadata.Embedded/EmbeddedQueryJob.cs:
	Don't assume Track.Uri is set

	* build/build.environment.mk: Add refs for Banshee.CoverArt extension
	* configure.ac: 

2008-05-28  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerView.cs:
	Fix small bug where when loading presets from the EQ editor caused the
	manager to set the dB value for the preamp to 10 times what the value
	should have been.

2008-05-27  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellStatusIndicator.cs:
	Fix bug where pixbuf wasn't centered in the cell

2008-05-27  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPodcastStatusIndicator.cs:
	Added support for the classic new item blue ball

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastItemView.cs:
	Implemented a cell data handler to set the opacity on text renderers

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	Implemented a StatusText cell and some helper properties

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastSource.cs:
	Added a Status column

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs: