@@ -1,0 +1,14 @@
+ASSEMBLY = Banshee.CoverArt
+TARGET = library
+LINK = $(REF_EXTENSION_COVERART)
+INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
+
+SOURCES =  \
+	Banshee.CoverArt/CoverArtService.cs \
+	Banshee.CoverArt/CoverArtJob.cs
+
+RESOURCES =  \
+	Banshee.CoverArt.addin.xml
+
+include $(top_srcdir)/build/build.mk
+
